# libcgl

./: .gitignore  Makefile.am  autogen.sh  configure.ac  guile-mode.scm  libcgl.pc.in  test.scm
doc/: doxygen_mainpage.h.in
scheme/: Makefile.am  cgl-init.scm  cgl-shader2c.scm  gl.h.scm  reader-extensions.scm  shader.scm  vecnf.scm
src/: Makefile  Makefile.am  atomic_buffer.c  atomic_buffer.h  bezier.c  blub.c  bspline.c  camera.c  camera.h  cgl.c  cgl.h  debug.c  debug.h  drawelement.c  drawelement.h  framebuffer.c  framebuffer.h  gl-version.h  glut.c  glut.h  impex.cpp  impex.h  libcgl.h  mesh.c  mesh.h  mm.h  mm.m4  objloader.cpp  objloader.h  prepared.cpp  prepared.h  scheme.c  scheme.h  shader-reload.c  shader.c  shader.h  texture.c  texture.h  wall-time.c  wall-time.h
wrapper-gen/: Makefile.am  Makefile.in  generate.sh  parse.lisp
